updated to latest main version
- translated new things

--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -4,9 +4,10 @@
   <description>Deutsche Übersetzung</description>
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan (aka. ShadowDuke)</author>
+  <modplatform>Modio</modplatform>
   <modioID>143281</modioID>
-  <modioFileID>2133774</modioFileID>
-  <modversion>1.62</modversion>
+  <modioFileID>2292317</modioFileID>
+  <modversion>1.65</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
