--- a/Translations/German/text-cityName-change.xml
+++ b/Translations/German/text-cityName-change.xml
@@ -11,6 +11,10 @@
 		<de-DE>Abdju</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_CITYNAME_ABU</zType>
+		<de-DE>Abu</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_CITYNAME_AEMINIUM</zType>
 		<de-DE>Aeminium</de-DE>
 	</Entry>
@@ -1275,7 +1279,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_EUSPERIDES</zType>
-		<de-DE>Eusperides</de-DE>
+		<de-DE>Euesperides</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_GADES</zType>
