--- a/Translations/German/text-mission-change.xml
+++ b/Translations/German/text-mission-change.xml
@@ -452,26 +452,26 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_TRIBE_PLAYER_WAR</zType>
-		<de-DE>Würden sie link(DIPLOMACY_WAR) erklären</de-DE>
+		<de-DE>link(DIPLOMACY_WAR) Beitritt Verhandlung</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_TRIBE_PLAYER_WAR_TARGET</zType>
-		<de-DE>Würden sie link(DIPLOMACY_WAR) erklären an</de-DE>
+		<de-DE>link(DIPLOMACY_WAR) Beitritt Verhandlung gegen</de-DE>
 	</Entry>
 	<Entry>	
 		<zType>TEXT_MISSION_PLAYER_TRIBE_WAR</zType>
-		<de-DE>Würden sie link(DIPLOMACY_WAR) erklären</de-DE>
+		<de-DE>link(DIPLOMACY_WAR) Beitritt Verhandlung</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_PLAYER_TRIBE_WAR_TARGET</zType>
-		<de-DE>Würden sie link(DIPLOMACY_WAR) erklären an</de-DE>
+		<de-DE>link(DIPLOMACY_WAR) Beitritt Verhandlung gegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_PLAYER_PLAYER_WAR</zType>
-		<de-DE>Würden sie link(DIPLOMACY_WAR) erklären</de-DE>
+		<de-DE>link(DIPLOMACY_WAR) Beitritt Verhandlung</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_PLAYER_PLAYER_WAR_TARGET</zType>
-		<de-DE>Würden sie link(DIPLOMACY_WAR) erklären an</de-DE>
+		<de-DE>link(DIPLOMACY_WAR) Beitritt Verhandlung gegen</de-DE>
 	</Entry>
 </Root>
